fix for android

--- a/Resources/index.html
+++ b/Resources/index.html
@@ -1,17 +1,13 @@
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" /> <meta name="format-detection" content="telephone=no" /><title>x</title>
-<link href="./html/pull-to-refresh.css" rel="stylesheet" type="text/css"/>
-<link href="./html/base.css" rel="stylesheet" type="text/css"/>
-<style TYPE="text/css">
-<!--
-body {background-color:#333;}
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
+  <meta name="format-detection" content="telephone=no" />
+  <title>x</title>
 </head>
 <body>
-<input id="hellobtn" type="button" value="Hello">
-<input id="goodbyebtn" type="button" value="Good Bye">
-<script type="text/javascript" src="./index.js"></script>
+  <input id="hello_btn" type="button" value="Hello">
+  <input id="goodbye_btn" type="button" value="Good Bye">
+  <script type="text/javascript" src="./index.js"></script>
 </body>
-</html>'
+</html>
